--- a/.github/workflows/gh-actions-DeployApp.yml
+++ b/.github/workflows/gh-actions-DeployApp.yml
@@ -48,7 +48,7 @@ jobs:
     - uses: azure/appservice-settings@v1
       with:
         app-name: 'juiceshop-dev-devsecops-${{ secrets.LABINSTANCEID }} '
-        general-settings-json: '{"linuxFxVersion": "DOCKER|acrdevsecops${{ secrets.LABINSTANCEID }}.azurecr.io/devsecops:$21665746170"}' 
+        general-settings-json: '{"linuxFxVersion": "DOCKER|acrdevsecops${{ secrets.LABINSTANCEID }}.azurecr.io/devsecops:21665746170"}' 
 
     - uses: Azure/cli@v1.0.0
       with:
@@ -73,7 +73,7 @@ jobs:
     - uses: azure/appservice-settings@v1
       with:
         app-name: 'juiceshop-prod-devsecops-${{ secrets.LABINSTANCEID }} '
-        general-settings-json: '{"linuxFxVersion": "DOCKER|acrdevsecops${{ secrets.CONTAINERREGISTRY }}.azurecr.io/devsecops:${{ github.run_id }}"}' 
+        general-settings-json: '{"linuxFxVersion": "DOCKER|acrdevsecops${{ secrets.CONTAINERREGISTRY }}.azurecr.io/devsecops:21665746170"}' 
         app-settings-json: '[{ "name": "SQL_DB_URL", "value": "@Microsoft.KeyVault(SecretUri=https://kvdevsecops158777891.vault.azure.net/secrets/SQL-DB-URL)", "slotSetting": false }, { "name": "2FASecret", "value": "@Microsoft.KeyVault(SecretUri=https://kvdevsecops158777891.vault.azure.net/secrets/2FASecret)", "slotSetting": false }]    '
     - uses: Azure/cli@v1.0.0
       with:
